--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,5 +12,5 @@ button{
 
 button.primary{
   background-color: #F5385D;
-  @apply bg-primary p-2 w-full text-white;
+  @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
